--- a/styles.css
+++ b/styles.css
@@ -271,7 +271,7 @@ section {
 
 .about-pic {
   border-radius: 2rem;
-  margin-bottom: 40px;
+   
   padding-left: 0px;
 }
 
@@ -282,14 +282,30 @@ section {
 }
 
 .details-container {
-  padding: 1.5rem;
-  flex: 1;
+  flex: 2;
   background: white;
-  border-radius: 2rem;
+  border-radius: 3rem;
   border: rgb(53, 53, 53) 0.1rem solid;
   border-color: rgb(163, 163, 163);
   text-align: center;
+  padding: 1.5rem 2rem;
+  margin-bottom: -70px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  width: 220px;
+  height: auto;
 }
+
+.details-container h3 {
+  margin-bottom: 0.5rem;
+}
+
+.details-container p {
+  margin-bottom: 0.5rem;
+  line-height: 1.5;
+}
+
+
+
 
 .section-container {
   gap: 4rem;
@@ -297,9 +313,7 @@ section {
 }
 
 .section__pic-container {
-  height: 400px;
-  width: 400px;
-  margin: auto 0;
+  margin-right: 40px;
 }
 
 /* EXPERIENCE SECTION */
@@ -429,3 +443,46 @@ footer {
 footer p {
   text-align: center;
 }
+
+
+/* Theme Toggle Icon */
+.theme-toggle {
+  cursor: pointer;
+  font-size: 1.75rem;
+  color: rgb(53, 53, 53); /* Default color for light mode */
+  transition: color 0.3s ease;
+}
+
+.dark-theme .theme-toggle {
+  color: yellow; /* Color for dark mode */
+}
+
+
+/* Dark Theme */
+.dark-theme {
+  background-color: #121212;
+  color: #f5f5f5;
+}
+
+.dark-theme nav {
+  background-color: #090909;
+}
+
+.dark-theme .btn {
+  background-color: #444;
+  color: white;
+}
+
+.dark-theme a {
+  color: #f5f5f5;
+}
+
+.dark-theme .details-container {
+  background-color: #2c2c2c;
+  border-color: #444;
+}
+
+.dark-theme .icon {
+  filter: invert(1); /* Invert icons for dark mode */
+}
+
